infra/vpc.tf
resource "aws_vpc" "main_mern" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "main_mern"
  }

}
